5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1756_1580.log
== TEST (2019-05-29 10:33:35) 
-- CODE:
from numpy import*

v= array(input(int("Notas:")))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while():
	if(v[i]<c):
		x= size(v)<c
		print(x)
	elif(v[i]>c):
		x= size(v)>c
		print(x)
	elif(v[i]<r):
		x= size(v)<r
		print(x)
	elif(v[i]>c):
		x= sum(v)/size(v)
	elif(v[i]>c):
		x= max(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:33:50) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while():
	if(v[i]<c):
		x= size(v)<c
		print(x)
	elif(v[i]>c):
		x= size(v)>c
		print(x)
	elif(v[i]<r):
		x= size(v)<r
		print(x)
	elif(v[i]>c):
		x= sum(v)/size(v)
	elif(v[i]>c):
		x= max(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:35:54) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while(size(v)>1):
	if(v[i]<c):
		x= size(v)<c
		print(x)
	elif(v[i]>c):
		x= size(v)>c
		print(x)
	elif(v[i]<r):
		x= size(v)<r
		print(x)
	elif(v[i]>c):
		x= sum(v)/size(v)
	elif(v[i]>c):
		x= max(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:37:25) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while(size(v)>1):
	if(v[i]<c):
		x= size(v)<c
		print(x)
		elif(v[i]>c):
			x= size(v)>c
			print(x)
			elif(v[i]<r):
				x= size(v)<r
				print(x)
					elif(v[i]>c):
						x= sum(v)/size(v)
							elif(v[i]>c):
								x= max(v)

-- ERROR:
File "XXXX", line 13
    elif(v[i]>c):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:37:54) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while(size(v)>1):
	if(v[i]<c):
		x= size(v)<c
		print(x)
		if(v[i]>c):
			x= size(v)>c
			print(x)
			if(v[i]<r):
				x= size(v)<r
				print(x)
					if(v[i]>c):
						x= sum(v)/size(v)
							if(v[i]>c):
								x= max(v)

-- ERROR:
File "XXXX", line 19
    if(v[i]>c):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:38:07) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while(size(v)>1):
	if(v[i]<c):
		x= size(v)<c
		print(x)
		if(v>c):
			x= size(v)>c
			print(x)
			if(v[i]<r):
				x= size(v)<r
				print(x)
					if(v[i]>c):
						x= sum(v)/size(v)
							if(v[i]>c):
								x= max(v)

-- ERROR:
File "XXXX", line 19
    if(v[i]>c):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:38:21) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while(size(v)>1):
	if(v[i]<c):
		x= size(v)<c
		print(x)
		if(v>c):
			x= size(v)>c
			print(x)
			if(v[i]<r):
				x= size(v)<r
				print(x)
					if(vi>c):
						x= sum(v)/size(v)
							if(v[i]>c):
								x= max(v)

-- ERROR:
File "XXXX", line 19
    if(vi>c):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:38:28) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while(size(v)>1):
	if(v[i]<c):
		x= size(v)<c
		print(x)
		if(v>c):
			x= size(v)>c
			print(x)
			if(v[i]<r):
				x= size(v)<r
				print(x)
					if(v>c):
						x= sum(v)/size(v)
							if(v[i]>c):
								x= max(v)

-- ERROR:
File "XXXX", line 19
    if(v>c):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:38:44) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
e= size(v)
c=1
r=6

while(size(v)>1):
	if(v[i]<c):
		x= size(v)<c
		print(x)
		if(v>c):
			x= size(v)>c
			print(x)
			if(v[i]<r):
				x= size(v)<r
				print(x)
				if(v>c):
					x= sum(v)/size(v)
					if(v[i]>c):
						x= max(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:40:06) 
-- CODE:
from numpy import*

v= array(input("Notas:"))
r= array(input("Nomes dos alunos:"))
f=0
a=0
p=0
r=0
s=0
n=0
al=""

i=0

while(i<size(v)):
	if(v[i]==-1):
		faltas+=1
	if(v[i]>=6):
		a+=1
	if(v[i]!=-1):
		p+=1
		if(v[1]<6):
			r+=1
			s+=v[i]
			n+=1
	if(v[1]==max(v)):
		al=r[i]
	i+=1
	
print(f)
print(a)
print(r)
media= round(s/n,2)
print(media)
print(al)
-- EXECUTION TIME:
0.556752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(v[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:43:19) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))
faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0

while(i<size(notas)):
	if(notas[i]==-1):
		faltas+=1
	if(notas[i]>=6):
		aprovacoes+=1
	if(notas[i]!=-1):
		presentes+=1
		if(notas[1]<6):
			reprovacoes+=1
		soma+=notas[i]
		n+=1
	if(notas[1]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/notas,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:43:21) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))
faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0

while(i<size(notas)):
	if(notas[i]==-1):
		faltas+=1
	if(notas[i]>=6):
		aprovacoes+=1
	if(notas[i]!=-1):
		presentes+=1
		if(notas[1]<6):
			reprovacoes+=1
		soma+=notas[i]
		n+=1
	if(notas[1]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/notas,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.43866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:45:15) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[1]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[1]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/notas,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.53225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:45:27) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[1]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[1]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:45:27) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[1]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[1]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.424676
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:46:04) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[1]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.385777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:46:04) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[1]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:46:06) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[1]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:46:06) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[1]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.348928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:46:40) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.377273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:46:40) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma+=notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:46:58) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=somas+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:46:58) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=somas+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.61699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:47:27) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:47:28) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.334831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:47:31) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
1.45861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:47:31) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
1.52679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:47:32) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i+=1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
2.18226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:48:21) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.45886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1580/main.py", line 16, in <module>
    if(notas[i]==-1):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:21) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:23) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:23) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:24) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:24) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:24) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:25) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:25) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:25) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 11:48:25) 
-- CODE:
from numpy import*

notas= array(input("Notas:"))
nomes= array(input("Nomes dos alunos:"))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:49:54) 
-- CODE:
from numpy import*

notas= array(eval(input("Notas:")))
nomes= array(eval(input("Nomes dos alunos:")))

faltas=0
aprovacoes=0
presentes=0
reprovacoes=0
soma=0
n=0
aluno=""

i=0
while(i<size(notas)):
	if(notas[i]==-1):
		faltas=faltas+1
	if(notas[i]>=6):
		aprovacoes=aprovacoes+1
	if(notas[i]!=-1):
		presentes=presentes+1
		if(notas[i]<6):
			reprovacoes=reprovacoes+1
		soma=soma+notas[i]
		n=n+1
	if(notas[i]==max(notas)):
		aluno=nomes[i]
	i=i+1
	
print(faltas)
print(aprovacoes)
print(reprovacoes)
media= round(soma/n,2)
print(media)
print(aluno)
-- EXECUTION TIME:
0.353198
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
